# fileutils

./: .gitignore  pyproject.toml  readme.md
fileutils/: __init__.py  files.py
fileutils.egg-info/: PKG-INFO  SOURCES.txt
fileutils_dir.egg-info/: PKG-INFO  SOURCES.txt
