[project]
name = "fileutils-dir"
version = "0.3.0"
description = "Small utilities for listing files in directories"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Jatavallabhula Sarat Anirudh"}
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
